fix(build): use npx to avoid vite permission issue on Vercel

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
     "preview": "vite preview --port 5173",
     "start:server": "node server/index.js"
   },
